# weather-station

./: Cargo.toml  README.md  build.rs
src/: ca_cert.pem  dashboard.rs  icons.rs  lib.rs  weather.rs  wifi.rs
