[package]
edition = "2021"
name = "weather-station"
version = "0.1.0"

[[bin]]
name = "weather-station"
path = "./src/bin/main.rs"

[dependencies]
defmt = "1"
embassy-net = { version = "0.7.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
  #addition:
  "dns",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.7.0"
esp-hal = { version = "1.0.0-beta.0", features = [
  "defmt",
  "esp32",
  "unstable",
] }
esp-println = { version = "0.13.0", features = ["defmt-espflash", "esp32"] }
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-32768",
] }
embassy-time = "0.4.0"
esp-hal-embassy = { version = "0.7.0", features = ["esp32"] }
esp-wifi = { version = "0.13.0", features = [
  "builtin-scheduler",
  "defmt",
  "esp-alloc",
  "esp32",
  "smoltcp",
  "wifi",
] }
heapless = { version = "0.8.0", default-features = false, features = ["serde"] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
  # addition:
  "dns-max-server-count-4",
] }
static_cell = { version = "2.1.0", features = ["nightly"] }
embedded-hal-bus = { version = "0.3" }
embedded-graphics = "0.8.1"
tinybmp = "0.6.0"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
chrono = { version = "0.4.40", default-features = false, features = ["serde"] }
serde-json-core = "0.6.0"
serde_repr = "0.1.20"
profont = "0.7.0"
reqwless = { default-features = false, features = [
  "esp-mbedtls",
  "log",
], git = "https://github.com/ImplFerris/reqwless", branch = "esp-hal-1.0.0" }
esp-mbedtls = { git = "https://github.com/esp-rs/esp-mbedtls.git", rev = "03458c3", features = [
  "esp32",
] }
epd-waveshare = { features = [
  "graphics",
], git = "https://github.com/ImplFerris/epd-waveshare" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
